--- a/PariahCybersecTest.csproj
+++ b/PariahCybersecTest.csproj
@@ -36,6 +36,7 @@
     <PackageReference Include="K4os.Compression.LZ4" Version="1.3.8" />
     <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Parquet.Net" Version="5.1.1" />
     <PackageReference Include="System.Data.HashFunction.Interfaces" Version="2.0.0" />
   </ItemGroup>
 
